--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -4,13 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/background_light"
-    android:gravity="center_horizontal"
+    android:gravity="center"
     tools:context=".view.Tab1Fragment">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:id="@+id/weather_panel"
+        android:gravity="center"
         android:visibility="gone">
 
         <TextView
