--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -2,11 +2,34 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Tab 2"
-        android:textSize="36sp" />
+        android:padding="20dp"
+        android:gravity="center"
+        android:id="@+id/main_info"
+        android:orientation="vertical">
+        <TextView
+            android:textStyle="bold"
+            android:textSize="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="5 Day Forecast" />
+        <TextView
+            android:textStyle="bold"
+            android:id="@+id/txt_city_name"
+            android:textSize="25dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Weather in Hayward, SF" />
+    </LinearLayout>
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/main_info"
+        android:id="@+id/recycle_view"
+        android:padding="30dp">
+
+    </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
